8209586: AARCH64: SymbolTable changes throw assert on aarch64

Cast the comparison value to match the signdeness

Reviewed-by: gziemski, coleenp